compiler/flux_hir/src/tests/snapshots/flux_hir__tests__structs__errors_typecheck_method_call.snap
---
source: compiler/flux_hir/src/tests/structs.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn foo() -> () {

}

fn main() -> () {
let foo <unknown type> = struct Foo {

};
let x s32 = foo.foo();
}



Diagnostics

[E0031] Error: type mismatch
    ,-[ main.flx:12:6]
    |
  6 |         fn foo() {}
    *             | 
    *             `- ()
    * 
 11 | ,-> 
 12 | |->     let x s32 = foo.foo();
    * |        ^^^^|^^^^               
    * `-------------------------------- s32
    *              |                   
    *              `------------------- type mismatch between `s32` and `()`
----'

