compiler/flux_hir/src/tests/snapshots/flux_hir__tests__structs__errors_uninitialized_fields.snap
---
source: compiler/flux_hir/src/tests/structs.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn main() -> () {
let foo_instance <unknown type> = struct Foo {
x: 1
};
}



Diagnostics

[E0027] Error: uninitialized fields in struct expression
    ,-[ main.flx:14:15]
    |
 14 | ,->     let foo_instance = Foo {
 15 | |->         x: 1,
    * |                   
    * `------------------- uninitialized fields `y`, `z` for `Foo` struct initialization
----'

