compiler/flux_hir/src/tests/snapshots/flux_hir__tests__structs__errors_unknown_field_referenced.snap
---
source: compiler/flux_hir/src/tests/structs.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn main() -> () {
let foo <unknown type> = struct Foo {

};
let x <unknown type> = foo.x;
}



Diagnostics

[E0030] Error: could not find field
   ,-[ main.flx:8:10]
   |
 8 |     let x = foo.x;
   *          |  
   *          `-- could not find field called `x` for type `Foo`
---'

