compiler/flux_hir/src/tests/snapshots/flux_hir__tests__structs__errors_unknown_fields.snap
---
source: compiler/flux_hir/src/tests/structs.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn main() -> () {
let foo_instance <unknown type> = struct Foo {
x: 0, 
foo: 0, 
bar: 0, 
bazz: 0
};
}



Diagnostics

[E0026] Error: uninitialized fields in struct expression
    ,-[ main.flx:14:15]
    |
 14 | ,->     let foo_instance = Foo {
    : :   
 18 | |->         bazz: 0,
    * |                      
    * `---------------------- uninitialized fields `y`, `z` for `Foo` struct initialization
----'
[E0027] Error: unknown fields in struct expression
    ,-[ main.flx:14:15]
    |
 14 | ,->     let foo_instance = Foo {
    : :   
 18 | |->         bazz: 0,
    * |                      
    * `---------------------- unknown fields `foo`, `bar`, `bazz` for `Foo` struct initialization
----'

