compiler/flux_hir/src/tests/snapshots/flux_hir__tests__structs__generic_typecheck_in_initialization.snap
---
source: compiler/flux_hir/src/tests/structs.rs
expression: s
---
//  main.flx

trait Bar  {
    
    
}

struct Foo<T>  where T is Bar {
T: Bar x}

struct Bazz  {
}

fn main() -> () {
    let bazz Bazz = struct Bazz {      };
    let foo Foo = struct Foo {     x: bazz };
}

Diagnostics

[E0043] Error: trait restrictions not met
    ,-[ main.flx:13:8]
    |
  6 |     where T is Bar
    |           ^|^  
    |            `--- restriction `Bar` defined here
    | 
 13 | fn main() {
    |        ^^|^  
    |          `--- trait restriction `Bar` not met for type `Bazz`
----'

