compiler/flux_hir/src/tests/snapshots/flux_hir__tests__structs__typecheck_field_access.snap
---
source: compiler/flux_hir/src/tests/structs.rs
expression: s
---
//  main.flx

struct Foo {
u32 x}

fn main() -> () {
    let foo Foo = struct Foo {     x: 0 };
    let x u32 = foo.x;
}

Diagnostics

[E0041] Error: type mismatch
    ,-[ main.flx:12:6]
    |
  4 |         x u32,
    |        ^|^  
    |         `--- `u32`
    | 
 11 | ,-> 
 12 | |->     let x s32 = foo.x;
    | |        ^^|^^               
    | `---------------------------- `s32`
    |            |                 
    |            `----------------- type mismatch between `s32` and `u32`
----'

