compiler/flux_hir/src/tests/snapshots/flux_hir__tests__structs__typecheck_method_call.snap
---
source: compiler/flux_hir/src/tests/structs.rs
expression: s
---
//  main.flx

struct Foo {
}

apply  to Foo {
    
    fn foo() -> () {
        
    }
}

fn main() -> () {
    let foo Foo = struct Foo {      };
    let x () = foo.foo();
}

Diagnostics

[E0041] Error: type mismatch
    ,-[ main.flx:12:6]
    |
  6 |         fn foo() {}
    |             | 
    |             `- `()`
    | 
 11 | ,-> 
 12 | |->     let x s32 = foo.foo();
    | |        ^^^^|^^^^               
    | `-------------------------------- `s32`
    |              |                   
    |              `------------------- type mismatch between `s32` and `()`
----'

